удаление ответов. Стиль картинок

--- a/grsmu_diplom/demo_site/templates/demo_site/comment_edit.html
+++ b/grsmu_diplom/demo_site/templates/demo_site/comment_edit.html
@@ -2,12 +2,14 @@
 {% block page_content %}
 <div class="col-md-8 offset-md-2">
     <h1>Редактирование комментария:</h1>
+    <div class="container">
     <form method = "POST">
     {% csrf_token %}
         <div class="form-group">
-            {{ form }}
+            {{ form.as_p }}
         </div>
     <button type="submit" class="btn btn-primary">Изменить</button>
     </form>
+</div>
 </div>
 {% endblock %}
