--- a/grsmu_diplom/demo_site/templates/demo_site/demo_site_department.html
+++ b/grsmu_diplom/demo_site/templates/demo_site/demo_site_department.html
@@ -13,17 +13,19 @@
     <div class="row">
        {% for teacher in teachers %}
         <div class="col-md-3">
+            <a href="{% url 'demo_site_detail' teacher.pk %}">
             <div class="teacher-card" style = "min-height: 300px;">
-                <div class="teacher-card-body" style = "max-height: 300px;">
+                <div class="test"></div>
+                <div class="teacher-card-body" style = "max-height: 300px; background-image: url({{ teacher.teacher_img.url }});">
                     {% if teacher.teacher_img %}
                     <img class = "img img-responsive" src="{{ teacher.teacher_img.url }}" alt="Teacher Picture" >
                     {% else %}
                     <img class = "img img-responsive" src="{% static 'images/teacher.jpg' %}" alt="Teacher Picture" >
                     {% endif %}
-                    <a href="{% url 'demo_site_detail' teacher.pk %}" class="teacher-name">{{ teacher.name|title }}</a>
+                    <div class="teacher-name">{{ teacher.name|title }}</div>
                     <div class="teacher-position">{{ teacher.position }}</div>
                 </div>
-            </div>
+            </div></a>
         </div>
         {% endfor %}
     </div>
