--- a/grsmu_diplom/demo_site/templates/demo_site/demo_site_detail.html
+++ b/grsmu_diplom/demo_site/templates/demo_site/demo_site_detail.html
@@ -105,25 +105,29 @@
             	{% else %}
                 <img class="d-flex g-width-50 g-height-50 rounded-circle g-mt-3 g-mr-15 comment-img" src="{% static 'images/user.jpg' %}" alt="Image Description">
                 {% endif %}
-                <div class="media-body u-shadow-v18 g-bg-secondary g-pa-30">
+            <div class="media-body u-shadow-v18 g-bg-secondary g-pa-30">
               <div class="g-mb-15">
                 <h5 class="h5 g-color-gray-dark-v1 mb-0">{{ comment.author }}</h5>
                 <span class="g-color-gray-dark-v4 g-font-size-12">{{comment.created_on.date }}</span>
                 <p>{{ comment.body }}</p>
             </div>
-            {% if comment.author == request.user.username or request.user.is_superuser %}
-        <a href="{% url 'comment_deletion' comment.pk %}">Удалить</a>
-        <a href="{% url 'comment_edit' comment.pk %}">Изменить</a>
+            {% if comment.author == request.user or request.user.is_superuser %}
+            <form method="post" id="comment-deletion" style="margin-bottom: -25px;">
+            {% csrf_token %}
+            <button type="submit" name="comment_delete" class="btn btn-danger">Удалить</button>
+            <input type="hidden" name="comment_pk" value="{{ comment.pk }}">
+            <a href="{% url 'comment_edit' comment.pk %}">Изменить</a>
             {% endif %}
-        <a data-toggle="collapse" href="#collapse{{comment.pk}}" role="button" aria-expanded="false" aria-controls="collapse{{comment.pk}}">Ответить</a>
+            <a data-toggle="collapse" href="#collapse{{comment.pk}}" role="button" aria-expanded="false" aria-controls="collapse{{comment.pk}}">Ответить</a>
+            </form>
             </div>
         </div>
 <!--ANSWERS-->
     {% for answer in comment_answers %}
     {% if answer.comment == comment %}
         <div class="media g-mb-30 media-comment-answer">
-                {% if answer.user.profile.profile_pic %}
-                <img class="d-flex g-width-50 g-height-50 rounded-circle g-mt-3 g-mr-15 comment-answer-img" src="{{ answer.user.profile.profile_pic.url }}" alt="Image Description">
+                {% if answer.author.profile.profile_pic %}
+                <img class="d-flex g-width-50 g-height-50 rounded-circle g-mt-3 g-mr-15 comment-answer-img" src="{{ answer.author.profile.profile_pic.url }}" alt="Image Description">
             	{% else %}
                 <img class="d-flex g-width-50 g-height-50 rounded-circle g-mt-3 g-mr-15 comment-answer-img" src="{% static 'images/user.jpg' %}" alt="Image Description">
                 {% endif %}
@@ -133,11 +137,15 @@
                 <span class="g-color-gray-dark-v4 g-font-size-12">{{answer.created_on.date }}</span>
                 <p>{{ answer.body }}</p>
             </div>
-            {% if answer.author == request.user.username or request.user.is_superuser %}
-        <a href="{% url 'comment_deletion' comment.pk %}">Удалить</a>
+            {% if answer.author == request.user or request.user.is_superuser %}
+            <form method="post" style="margin-bottom: -25px;">
+                {% csrf_token %}
+                    <button type="submit" name="answer_delete" class="btn btn-danger">Удалить</button>
+                    <input type="hidden" name="answer_pk" value="{{ answer.pk }}">
+            </form>
             {% endif %}
             </div>
-        </div>
+            </div>
     {% endif %}
     {% endfor %}
 
