--- a/grsmu_diplom/scraper/templates/scraping/teacher_scraping_page.html
+++ b/grsmu_diplom/scraper/templates/scraping/teacher_scraping_page.html
@@ -5,7 +5,7 @@
 
 <div class="col-md-8 offset-md-2">
 <form method = "POST">
-    <button type="submit" class="btn btn-primary">Получить данные</button>
+    <button type="submit" name="data-get" class="btn btn-primary">Получить данные</button>
     {% csrf_token %}
     <button type="submit" name="data-save" class="btn btn-primary">Добавить в базу</button>
     <a href="pic_update">Обновить фотографии</a>
