--- a/grsmu_diplom/demo_site/templates/demo_site/demo_site_department.html
+++ b/grsmu_diplom/demo_site/templates/demo_site/demo_site_department.html
@@ -16,10 +16,11 @@
             <a href="{% url 'demo_site_detail' teacher.pk %}">
             <div class="teacher-card" style = "min-height: 300px;">
                 <div class="test"></div>
-                <div class="teacher-card-body" style = "max-height: 300px; background-image: url({{ teacher.teacher_img.url }});">
                     {% if teacher.teacher_img %}
+                <div class="teacher-card-body" style = "max-height: 300px; background-image: url({{ teacher.teacher_img.url }});">
                     <img class = "img img-responsive" src="{{ teacher.teacher_img.url }}" alt="Teacher Picture" >
                     {% else %}
+                <div class="teacher-card-body" style = "max-height: 300px; background-image: url{% static '/images/teacher.jpg' %}">
                     <img class = "img img-responsive" src="{% static 'images/teacher.jpg' %}" alt="Teacher Picture" >
                     {% endif %}
                     <div class="teacher-name">{{ teacher.name|title }}</div>
