--- a/grsmu_diplom/demo_site/templates/demo_site/demo_site_index.html
+++ b/grsmu_diplom/demo_site/templates/demo_site/demo_site_index.html
@@ -4,7 +4,11 @@
 
 
 <div class="col-md-8 offset-md-2">
-    <div class="container">
+    <div class="container" style="max-width: 1200px;
+    background-color: rgb(255 255 220 / 50%);
+    backdrop-filter: blur(100px);
+    padding-top: 20px;
+    border-radius: 30px;">
     <h1>Кафедры</h1>
     <hr>
     {% for department in departments %}
