--- a/grsmu_diplom/demo_site/templates/demo_site/demo_site_department.html
+++ b/grsmu_diplom/demo_site/templates/demo_site/demo_site_department.html
@@ -5,7 +5,6 @@
 <div class="col-md-8 offset-md-2">
     <h1>{{ department | title }}</h1>
     <hr>
-
 </div>
 
 
@@ -26,7 +25,8 @@
                     <div class="teacher-name">{{ teacher.name|title }}</div>
                     <div class="teacher-position">{{ teacher.position }}</div>
                 </div>
-            </div></a>
+            </div>
+            </a>
         </div>
         {% endfor %}
     </div>
