--- a/grsmu_diplom/demo_site/templates/demo_site/demo_site_detail.html
+++ b/grsmu_diplom/demo_site/templates/demo_site/demo_site_detail.html
@@ -3,50 +3,42 @@
 {% load static %}
 
 
-<div class="container" style="max-width: 1200px;
-    background-color: rgb(255 255 220 / 50%);
-    backdrop-filter: blur(100px);
-    padding-top: 20px;
-    border-radius: 30px;">
+<div class="container" style="max-width: 1200px; background-color: rgb(255 255 220 / 50%); backdrop-filter: blur(100px); padding-top: 20px; border-radius: 30px;">
    <div class="top">
-        <div class="row justify-content-md-center">
-    <div class="col-md-auto">
-    {% if teacher.teacher_img %}
-    <img class = "img_detail" src="{{ teacher.teacher_img.url }}" alt="Teacher Picture" >
-    {% else %}
-    <img class = "img_detail" src="{% static 'images/teacher.jpg' %}" alt="Teacher Picture" >
-    {% endif %}
-    </div>
+       <div class="row justify-content-md-center">
+           <div class="col-md-auto">
+           {% if teacher.teacher_img %}
+           <img class = "img_detail" src="{{ teacher.teacher_img.url }}" alt="Teacher Picture" >
+           {% else %}
+           <img class = "img_detail" src="{% static 'images/teacher.jpg' %}" alt="Teacher Picture" >
+           {% endif %}
+           </div>
 
-    <div class="col-md">
-        <div class="row">
-    <h1>{{ teacher.name }}</h1>
-    <small>
-        {{ teacher.position }} |&nbsp;
-        Кафедра: <a href="{% url 'demo_site_department' teacher.department.title %}">
-    {{ teacher.department.title }}
-    </a>
-    </small>
-    <p class="text-muted" style="font-size:12px">Коммуникабельность: {{ teacher.communication_average }} | Обучение: {{ teacher.teaching_average }} | Требовательность: {{ teacher.demanding_average }}</p>
-    </div>
-    <div class="row">
-        <div class="col-md"> Коммуникабельность
-    <div class="pie" style="--p:{{ teacher.communication_average }};--c:#0d6efd;--b:8px"> {{ teacher.communication_average }}</div>
-    </div>
-    <div class="col-md"> Обучение
-    <div class="pie" style="--p:{{ teacher.teaching_average }};--c:#0d6efd;--b:8px"> {{ teacher.teaching_average }}</div>
-    </div>
-    <div class="col-md"> Требовательность
-    <div class="pie" style="--p:{{ teacher.demanding_average }};--c:#0d6efd;--b:8px"> {{ teacher.demanding_average }}</div>
-    </div>
-     <small>Количество голосов: {{ vote_count }}</small>
-
-    </div>
-    </div>
-    </div>
-</div>
-
-
+       <div class="col-md">
+           <div class="row">
+               <h1>{{ teacher.name }}</h1>
+               <small>
+                   {{ teacher.position }} |&nbsp;
+                   Кафедра: <a href="{% url 'demo_site_department' teacher.department.title %}">
+                   {{ teacher.department.title }}</a>
+               </small>
+               <p class="text-muted" style="font-size:12px">Коммуникабельность: {{ teacher.communication_average }} | Обучение: {{ teacher.teaching_average }} | Требовательность: {{ teacher.demanding_average }}</p>
+           </div>
+           <div class="row">
+               <div class="col-md"> Коммуникабельность
+                   <div class="pie" style="--p:{{ teacher.communication_average }};--c:#0d6efd;--b:8px"> {{ teacher.communication_average }}</div>
+               </div>
+               <div class="col-md"> Обучение
+                   <div class="pie" style="--p:{{ teacher.teaching_average }};--c:#0d6efd;--b:8px"> {{ teacher.teaching_average }}</div>
+               </div>
+               <div class="col-md"> Требовательность
+                   <div class="pie" style="--p:{{ teacher.demanding_average }};--c:#0d6efd;--b:8px"> {{ teacher.demanding_average }}</div>
+               </div>
+           <small>Количество голосов: {{ vote_count }}</small>
+           </div>
+       </div>
+       </div>
+   </div>
 
 <!--    ОСТАВИТЬ КОММЕНТАРИЙ-->
     {% if user.is_authenticated %}
@@ -82,17 +74,17 @@
                 </div>
             </form>
         </div>
-</div>
+    </div>
 <!--END VOTING-->
     {% else %}
     <div class="card">
-    <div class="card-header">
-    Оставить комментарий
-    </div>
-    <div class="card-body">
-    <p class="card-text">Чтобы оставлять и читать комментарии необходимо войти в аккаунт!</p>
-    <a href="/user/login" class="btn btn-primary">Войти</a>
-    </div>
+        <div class="card-header">
+        Оставить комментарий
+        </div>
+        <div class="card-body">
+            <p class="card-text">Чтобы оставлять и читать комментарии необходимо войти в аккаунт!</p>
+            <a href="/user/login" class="btn btn-primary">Войти</a>
+        </div>
     </div>
     {% endif %}
 
@@ -100,53 +92,53 @@
     {% if group == 'Student' %}
     <h3>Комментарии:</h3>
     {% for comment in page_obj %}
-            <div class="media g-mb-30 media-comment">
-                {% if comment.author.profile.profile_pic %}
+        <div class="media g-mb-30 media-comment">
+            {% if comment.author.profile.profile_pic %}
                 <img class="d-flex g-width-50 g-height-50 rounded-circle g-mt-3 g-mr-15 comment-img" src="{{ comment.author.profile.profile_pic.url }}" alt="Image Description">
-            	{% else %}
+                {% else %}
                 <img class="d-flex g-width-50 g-height-50 rounded-circle g-mt-3 g-mr-15 comment-img" src="{% static 'images/user.jpg' %}" alt="Image Description">
                 {% endif %}
             <div class="media-body u-shadow-v18 g-bg-secondary g-pa-30">
-              <div class="g-mb-15">
-                <h5 class="h5 g-color-gray-dark-v1 mb-0">{{ comment.author }}</h5>
-                <span class="g-color-gray-dark-v4 g-font-size-12">{{comment.created_on.date }}</span>
-                <p>{{ comment.body }}</p>
-            </div>
+                <div class="g-mb-15">
+                    <h5 class="h5 g-color-gray-dark-v1 mb-0">{{ comment.author }}</h5>
+                    <span class="g-color-gray-dark-v4 g-font-size-12">{{comment.created_on.date }}</span>
+                    <p>{{ comment.body }}</p>
+                </div>
             {% if comment.author == request.user or request.user.is_superuser %}
-            <form method="post" style="margin-bottom: -25px;">
-            {% csrf_token %}
-            <button type="submit" name="comment_delete" class="btn btn-danger">Удалить</button>
-            <input type="hidden" name="comment_pk" value="{{ comment.pk }}">
-            <a href="{% url 'comment_edit' comment.pk %}">Изменить</a>
+                <form method="post" style="margin-bottom: -25px;">
+                {% csrf_token %}
+                <button type="submit" name="comment_delete" class="btn btn-danger">Удалить</button>
+                <input type="hidden" name="comment_pk" value="{{ comment.pk }}">
+                <a href="{% url 'comment_edit' comment.pk %}">Изменить</a>
             {% endif %}
             <a data-toggle="collapse" href="#collapse{{comment.pk}}" role="button" aria-expanded="false" aria-controls="collapse{{comment.pk}}">Ответить</a>
-            </form>
+                </form>
             </div>
         </div>
 <!--ANSWERS-->
     {% for answer in comment_answers %}
     {% if answer.comment == comment %}
         <div class="media g-mb-30 media-comment-answer">
-                {% if answer.author.profile.profile_pic %}
+            {% if answer.author.profile.profile_pic %}
                 <img class="d-flex g-width-50 g-height-50 rounded-circle g-mt-3 g-mr-15 comment-answer-img" src="{{ answer.author.profile.profile_pic.url }}" alt="Image Description">
-            	{% else %}
+                {% else %}
                 <img class="d-flex g-width-50 g-height-50 rounded-circle g-mt-3 g-mr-15 comment-answer-img" src="{% static 'images/user.jpg' %}" alt="Image Description">
-                {% endif %}
-                <div class="media-body u-shadow-v18 g-bg-secondary g-pa-30">
-              <div class="g-mb-15">
-                <h5 class="h5 g-color-gray-dark-v1 mb-0">{{ answer.author }}</h5>
-                <span class="g-color-gray-dark-v4 g-font-size-12">{{answer.created_on.date }}</span>
-                <p>{{ answer.body }}</p>
-            </div>
+            {% endif %}
+            <div class="media-body u-shadow-v18 g-bg-secondary g-pa-30">
+                <div class="g-mb-15">
+                    <h5 class="h5 g-color-gray-dark-v1 mb-0">{{ answer.author }}</h5>
+                    <span class="g-color-gray-dark-v4 g-font-size-12">{{answer.created_on.date }}</span>
+                    <p>{{ answer.body }}</p>
+                </div>
             {% if answer.author == request.user or request.user.is_superuser %}
-            <form method="post" style="margin-bottom: -25px;">
-                {% csrf_token %}
+                <form method="post" style="margin-bottom: -25px;">
+                    {% csrf_token %}
                     <button type="submit" name="answer_delete" class="btn btn-danger">Удалить</button>
                     <input type="hidden" name="answer_pk" value="{{ answer.pk }}">
-            </form>
+                </form>
             {% endif %}
             </div>
-            </div>
+        </div>
     {% endif %}
     {% endfor %}
 
@@ -162,40 +154,41 @@
                 </div>
             </form>
         </div>
-</div>
+    </div>
     {% endfor %}
+
 <!--COMMENT ANSWER-->
     {% elif group == 'Not_student' %}
     <div class="card">
-    <div class="card-header">
-    Комментарии
-    </div>
-    <div class="card-body">
-    <p class="card-text">Чтобы просматривать комментарии необходимо подтвердить аккаунт!</p>
-    <a href="/user/profile" class="btn btn-primary">Подтвердить</a>
-    </div>
+        <div class="card-header">
+            Комментарии
+        </div>
+        <div class="card-body">
+            <p class="card-text">Чтобы просматривать комментарии необходимо подтвердить аккаунт!</p>
+            <a href="/user/profile" class="btn btn-primary">Подтвердить</a>
+        </div>
     {% endif %}
-</div>
-<div class="pagination_rounded">
-    <div class="step-links">
-        <ul>
-        {% if page_obj.has_previous %}
-          <li><a href="?page=1" class="prev">&laquo; First</a></li>
-            <li><a href="?page={{ page_obj.previous_page_number }}" class="prev"><i class="fa fa-angle-left" aria-hidden="true"></i>Prev</a></li>
-        {% endif %}
-
-        <li><span class="current">
-            {{ page_obj.number }} из {{ page_obj.paginator.num_pages }}
-        </span></li>
-
-        {% if page_obj.has_next %}
-            <li><a href="?page={{ page_obj.next_page_number }}" class="next"> Next <i class="fa fa-angle-right" aria-hidden="true"></i></a></li>
-            <li><a href="?page={{ page_obj.paginator.num_pages }}" class="next">Last &raquo;</a></li>
-        {% endif %}
-        </ul>
     </div>
-</div>
+<!--    PAGINATION-->
+    <div class="pagination_rounded">
+        <div class="step-links">
+            <ul>
+                {% if page_obj.has_previous %}
+                    <li><a href="?page=1" class="prev">&laquo; First</a></li>
+                    <li><a href="?page={{ page_obj.previous_page_number }}" class="prev"><i class="fa fa-angle-left" aria-hidden="true"></i>Prev</a></li>
+                {% endif %}
 
+                <li><span class="current">
+                    {{ page_obj.number }} из {{ page_obj.paginator.num_pages }}
+                </span></li>
+
+                {% if page_obj.has_next %}
+                    <li><a href="?page={{ page_obj.next_page_number }}" class="next"> Next <i class="fa fa-angle-right" aria-hidden="true"></i></a></li>
+                    <li><a href="?page={{ page_obj.paginator.num_pages }}" class="next">Last &raquo;</a></li>
+                {% endif %}
+            </ul>
+        </div>
+    </div>
 </div>
 
 
