--- a/grsmu_diplom/grsmu_diplom/templates/grsmu_diplom/main_page.html
+++ b/grsmu_diplom/grsmu_diplom/templates/grsmu_diplom/main_page.html
@@ -5,41 +5,40 @@
 <script type="text/javascript" src="{% static 'js/main_page.js' %}"> </script>
 
 <body background="{% static '/images/E0dsHx_WYAEiVk4.png' %}">
-<div class="container">
-<div class="col-md-8 offset-md-2">
+    <div class="container">
+        <div class="col-md-8 offset-md-2">
 
-<div class="chat_window">
-    <div class="top_menu">
-        <div class="buttons">
-            <div class="button close"></div>
-            <div class="button minimize"></div>
-            <div class="button maximize"></div>
+            <div class="chat_window">
+                <div class="top_menu">
+                    <div class="buttons">
+                        <div class="button close"></div>
+                        <div class="button minimize"></div>
+                        <div class="button maximize"></div>
+                    </div>
+                    <div class="title">Диалоги ГрГМУ</div>
+                </div>
+            <ul class="messages"></ul>
+                <div class="bottom_wrapper clearfix">
+                    <div class="message_input_wrapper">
+                        <input class="message_input" placeholder="Ваше сообщение..." />
+                    </div>
+                    <div class="send_message">
+                        <div class="icon"></div>
+                        <div class="text">Отправить</div>
+                    </div>
+                </div>
+            </div>
+            <div class="message_template">
+                <li class="message">
+                    <div class="avatar"></div>
+                    <div class="text_wrapper">
+                        <div class="text">
+                        </div>
+                    </div>
+                </li>
+            </div>
         </div>
-        <div class="title">Диалоги</div>
     </div>
-    <ul class="messages"></ul>
-    <div class="bottom_wrapper clearfix">
-        <div class="message_input_wrapper">
-            <input class="message_input" placeholder="Ваше сообщение..." />
-        </div>
-        <div class="send_message">
-            <div class="icon"></div>
-            <div class="text">Отправить</div>
-        </div>
-    </div>
-</div>
-<div class="message_template">
-    <li class="message">
-        <div class="avatar"></div>
-        <div class="text_wrapper">
-            <div class="text"></div>
-        </div>
-    </li>
-</div>
-
-
-</div>
-</div>
 </body>
 {% endblock %}
 
