--- a/grsmu_diplom/scraper/templates/scraping/department_scraping_page.html
+++ b/grsmu_diplom/scraper/templates/scraping/department_scraping_page.html
@@ -6,26 +6,23 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6">
-    <h2>Уже добавлены на сайт:</h2>
-    {% for dep in exist_dep_list %}
-    <li style="color: green">{{ dep }}</li>
-    {% endfor %}
+            <h2>Уже добавлены на сайт:</h2>
+            {% for dep in exist_dep_list %}
+                <li style="color: green">{{ dep }}</li>
+            {% endfor %}
         </div>
 
-    <div class="col-md-6">
-    <h2>Не добавлены на сайт:</h2>
+        <div class="col-md-6">
+            <h2>Не добавлены на сайт:</h2>
 
-    <form method = "POST">
-    {% csrf_token %}
-    {% for dep in new_dep_list %}
-    <input type="checkbox"  value= '{{ dep }}'><li style="color: red">{{ dep }}</li>
-    {% endfor %}
-    <button type="submit" class="btn btn-primary">Сохранить</button>
-    </form>
-
+            <form method = "POST">
+                {% csrf_token %}
+                {% for dep in new_dep_list %}
+                    <li style="color: red">{{ dep }}</li>
+                {% endfor %}
+                <button type="submit" class="btn btn-primary">Сохранить</button>
+            </form>
+        </div>
     </div>
-</div>
-
-
 </div>
 {% endblock %}
