поправлен везде стиль

--- a/grsmu_diplom/grsmu_diplom/templates/base.html
+++ b/grsmu_diplom/grsmu_diplom/templates/base.html
@@ -67,7 +67,8 @@
     {% include 'users/messages.html' %}
 <div class="content-main-block">
 <div class="col-md-8 offset-md-2">
-    <body background="{% static '/images/E0dsHx_WYAEiVk4.png' %}">
+
+    <body background="{% static '/images/E0dsHx_WYAEiVk4.png' %}" style="background-size:cover; background-position: left;">
     {% block page_content %}{% endblock %}
     </body>
 </div>
