--- a/grsmu_diplom/demo_site/templates/demo_site/demo_site_department.html
+++ b/grsmu_diplom/demo_site/templates/demo_site/demo_site_department.html
@@ -8,7 +8,7 @@
 </div>
 
 
-<div class="container">
+<div class="container" style="max-width: 1200px; background-color: rgb(255 255 220 / 50%); backdrop-filter: blur(100px); padding-top: 20px; border-radius: 30px; padding-bottom: 1px;">
     <div class="row">
        {% for teacher in teachers %}
         <div class="col-md-3">
