--- a/grsmu_diplom/demo_site/templates/demo_site/demo_site_detail.html
+++ b/grsmu_diplom/demo_site/templates/demo_site/demo_site_detail.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 
-<div class="container" style="max-width: 1200px; background-color: rgb(255 255 220 / 50%); backdrop-filter: blur(100px); padding-top: 20px; border-radius: 30px;">
+<div class="container" style="max-width: 1200px; background-color: rgb(255 255 220 / 50%); backdrop-filter: blur(100px); padding-top: 20px; border-radius: 30px; padding-bottom: 1px">
    <div class="top">
        <div class="row justify-content-md-center">
            <div class="col-md-auto">
@@ -48,7 +48,7 @@
         <div class="form-group">
             {{ comment_form.body }}
         </div>
-        <a class="btn btn-outline-primary" data-toggle="collapse" href="#collapse{{teacher.pk}}" role="button" aria-expanded="false" aria-controls="collapse{{teacher.pk}}">Оценка</a>
+        <a class="btn btn-secondary" data-toggle="collapse" href="#collapse{{teacher.pk}}" role="button" aria-expanded="false" aria-controls="collapse{{teacher.pk}}">Оценка</a>
         <button type="submit" name="comment_left" class="btn btn-primary">Отправить</button>
     </form>
 <!--VOTING-->
@@ -70,7 +70,7 @@
                     </div>
                 {% endfor %}
                 <div class="text-right">
-                    <button type="submit" name="score_submit" class="btn btn-outline-primary">Оценить</button>
+                    <button type="submit" name="score_submit" class="btn btn-secondary">Оценить</button>
                 </div>
             </form>
         </div>
@@ -116,31 +116,36 @@
             </div>
         </div>
 <!--ANSWERS-->
+    <details>
+    <summary style="text-align: center;">ответы</summary>
     {% for answer in comment_answers %}
     {% if answer.comment == comment %}
-        <div class="media g-mb-30 media-comment-answer">
-            {% if answer.author.profile.profile_pic %}
-                <img class="d-flex g-width-50 g-height-50 rounded-circle g-mt-3 g-mr-15 comment-answer-img" src="{{ answer.author.profile.profile_pic.url }}" alt="Image Description">
-                {% else %}
-                <img class="d-flex g-width-50 g-height-50 rounded-circle g-mt-3 g-mr-15 comment-answer-img" src="{% static 'images/user.jpg' %}" alt="Image Description">
-            {% endif %}
-            <div class="media-body u-shadow-v18 g-bg-secondary g-pa-30">
-                <div class="g-mb-15">
-                    <h5 class="h5 g-color-gray-dark-v1 mb-0">{{ answer.author }}</h5>
-                    <span class="g-color-gray-dark-v4 g-font-size-12">{{answer.created_on.date }}</span>
-                    <p>{{ answer.body }}</p>
+
+                <div class="media g-mb-30 media-comment-answer">
+                    {% if answer.author.profile.profile_pic %}
+                        <img class="d-flex g-width-50 g-height-50 rounded-circle g-mt-3 g-mr-15 comment-answer-img" src="{{ answer.author.profile.profile_pic.url }}" alt="Image Description">
+                        {% else %}
+                        <img class="d-flex g-width-50 g-height-50 rounded-circle g-mt-3 g-mr-15 comment-answer-img" src="{% static 'images/user.jpg' %}" alt="Image Description">
+                    {% endif %}
+                    <div class="media-body u-shadow-v18 g-bg-secondary g-pa-30">
+                        <div class="g-mb-15">
+                            <h5 class="h5 g-color-gray-dark-v1 mb-0">{{ answer.author }}</h5>
+                            <span class="g-color-gray-dark-v4 g-font-size-12">{{answer.created_on.date }}</span>
+                            <p>{{ answer.body }}</p>
+                        </div>
+                    {% if answer.author == request.user or request.user.is_superuser %}
+                        <form method="post" style="margin-bottom: -25px;">
+                            {% csrf_token %}
+                            <button type="submit" name="answer_delete" class="btn btn-danger">Удалить</button>
+                            <input type="hidden" name="answer_pk" value="{{ answer.pk }}">
+                        </form>
+                    {% endif %}
+                    </div>
                 </div>
-            {% if answer.author == request.user or request.user.is_superuser %}
-                <form method="post" style="margin-bottom: -25px;">
-                    {% csrf_token %}
-                    <button type="submit" name="answer_delete" class="btn btn-danger">Удалить</button>
-                    <input type="hidden" name="answer_pk" value="{{ answer.pk }}">
-                </form>
-            {% endif %}
-            </div>
-        </div>
     {% endif %}
     {% endfor %}
+                </details>
+
 
     <!--COMMENT ANSWER-->
     <div class = "collapse" id = "collapse{{comment.pk}}">
