--- a/grsmu_diplom/demo_site/templates/demo_site/demo_site_index.html
+++ b/grsmu_diplom/demo_site/templates/demo_site/demo_site_index.html
@@ -8,7 +8,7 @@
     background-color: rgb(255 255 220 / 50%);
     backdrop-filter: blur(100px);
     padding-top: 20px;
-    border-radius: 30px;">
+    border-radius: 30px; padding-bottom: 10px;">
         <h1>Кафедры</h1>
         <hr>
         {% for department in departments %}
