--- a/grsmu_diplom/scraper/templates/scraping/teacher_scraping_page.html
+++ b/grsmu_diplom/scraper/templates/scraping/teacher_scraping_page.html
@@ -4,68 +4,70 @@
 
 
 <div class="col-md-8 offset-md-2">
-    <form method = "POST">
-        <button type="submit" name="data-get" class="btn btn-primary">Получить данные</button>
-        {% csrf_token %}
-        <button type="submit" name="data-save" class="btn btn-primary">Добавить в базу</button>
-        <a href="pic_update">Обновить фотографии</a>
-    </form>
+    <div class="container" style="max-width: 1200px; background-color: rgb(255 255 220 / 50%); backdrop-filter: blur(100px); padding-top: 20px; border-radius: 30px;">
+        <form method = "POST">
+            <button type="submit" name="data-get" class="btn btn-primary">Получить данные</button>
+            {% csrf_token %}
+            <button type="submit" name="data-save" class="btn btn-primary">Добавить в базу</button>
+            <a href="pic_update">Обновить фотографии</a>
+        </form>
 
-    {% if a != -3 %}
-        <h2>Кафедры:</h2>
-        <h3>Найдено кафедр на сайте ГрГМУ: {{ grsmu_dep_count }}</h3>
-        <h3>Кафедр в базе: {{ base_department_count }}</h3>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <h3>Уже добавлены на сайт:</h3>
-                    <details>
-                        <summary>Добавлены</summary>
-                        {% for dep in old_dep_list %}
-                            <li style="color: green">{{ dep }}</li>
-                        {% endfor %}
-                    </details>
-                </div>
-                <div class="col-md-6">
-                    <h3>Не добавлены на сайт:</h3>
-                    <details>
-                        <summary>Не добавлены</summary>
-                            {% for dep in new_dep_list %}
-                                <li style="color: red">{{ dep }}</li>
+        {% if a != -3 %}
+            <h2>Кафедры:</h2>
+            <h3>Найдено кафедр на сайте ГрГМУ: {{ grsmu_dep_count }}</h3>
+            <h3>Кафедр в базе: {{ base_department_count }}</h3>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h3>Уже добавлены на сайт:</h3>
+                        <details>
+                            <summary>Добавлены</summary>
+                            {% for dep in old_dep_list %}
+                                <li style="color: green">{{ dep }}</li>
                             {% endfor %}
-                    </details>
+                        </details>
+                    </div>
+                    <div class="col-md-6">
+                        <h3>Не добавлены на сайт:</h3>
+                        <details>
+                            <summary>Не добавлены</summary>
+                                {% for dep in new_dep_list %}
+                                    <li style="color: red">{{ dep }}</li>
+                                {% endfor %}
+                        </details>
+                    </div>
                 </div>
-            </div>
-		    <hr>
-            <h2>Преподаватели:</h2>
-            <h3>Найдено преподавателей на сайте ГрГМУ: {{ a }}</h3>
+                <hr>
+                <h2>Преподаватели:</h2>
+                <h3>Найдено преподавателей на сайте ГрГМУ: {{ a }}</h3>
+                <h3>Преподавателей в базе: {{ teacher_count }}</h3>
+                <div class="row">
+                    <div class="col-md-6">
+                        <h3>Уже добавлены на сайт:</h3>
+                        <details>
+                            <summary>Добавлены</summary>
+                            {% for name in name_list %}
+                                <li style="color: green">{{ name }}</li>
+                            {% endfor %}
+                        </details>
+                    </div>
+                    <div class="col-md-6">
+                        <h3>Нe добавлены на сайт:</h3>
+                        <details>
+                            <summary>Не добавлены</summary>
+                            {% for name in new_names %}
+                                <li style="color: red">{{ name }}</li>
+                            {% endfor %}
+                        </details>
+                    </div>
+                </div>
+        {% else %}
+            <h3>Кафедр в базе: {{ base_department_count }}</h3>
             <h3>Преподавателей в базе: {{ teacher_count }}</h3>
-            <div class="row">
-                <div class="col-md-6">
-                    <h3>Уже добавлены на сайт:</h3>
-                    <details>
-                        <summary>Добавлены</summary>
-                        {% for name in name_list %}
-                            <li style="color: green">{{ name }}</li>
-                        {% endfor %}
-                    </details>
-                </div>
-                <div class="col-md-6">
-                    <h3>Ну добавлены на сайт:</h3>
-                    <details>
-                        <summary>Не добавлены</summary>
-                        {% for name in new_names %}
-                            <li style="color: red">{{ name }}</li>
-                        {% endfor %}
-                    </details>
-                </div>
-            </div>
-    {% else %}
-        <h3>Кафедр в базе: {{ base_department_count }}</h3>
-        <h3>Преподавателей в базе: {{ teacher_count }}</h3>
-    {% endif %}
+        {% endif %}
+        </div>
     </div>
 </div>
 
-{{ all_info }}
+<!--{{ all_info }}-->
 {% endblock %}
