--- a/grsmu_diplom/static/css/styles/demo_site/demo_site_detail.css
+++ b/grsmu_diplom/static/css/styles/demo_site/demo_site_detail.css
@@ -161,6 +161,7 @@ a:link {
     width: 90px;
     height: 34px;
     line-height: 34px;
+    background-color: white;
 }
 
 
@@ -185,6 +186,8 @@ a:link {
     width: 90px;
     height: 34px;
     line-height: 34px;
+    background-color: white;
+
 }
 
 .visible-xs {
