--- a/grsmu_diplom/demo_site/templates/demo_site/demo_site_detail.html
+++ b/grsmu_diplom/demo_site/templates/demo_site/demo_site_detail.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 
-<div class="container" style="max-width: 1200px; background-color: rgb(255 255 220 / 50%); backdrop-filter: blur(100px); padding-top: 20px; border-radius: 30px; padding-bottom: 1px">
+<div class="container" style="max-width: 1200px; background-color: rgb(255 255 255 / 75%); backdrop-filter: blur(100px); padding-top: 20px; border-radius: 30px; padding-bottom: 1px">
    <div class="top">
        <div class="row justify-content-md-center">
            <div class="col-md-auto">
@@ -101,7 +101,7 @@
             <div class="media-body u-shadow-v18 g-bg-secondary g-pa-30">
                 <div class="g-mb-15">
                     <h5 class="h5 g-color-gray-dark-v1 mb-0">{{ comment.author }}</h5>
-                    <span class="g-color-gray-dark-v4 g-font-size-12">{{comment.created_on.date }}</span>
+                    <span class="g-color-gray-dark-v4 g-font-size-12">{{ comment.author.profile.course }} курс {{comment.created_on.date }}</span>
                     <p>{{ comment.body }}</p>
                 </div>
             {% if comment.author == request.user or request.user.is_superuser %}
