--- a/grsmu_diplom/grsmu_diplom/templates/base.html
+++ b/grsmu_diplom/grsmu_diplom/templates/base.html
@@ -68,7 +68,7 @@
 <div class="content-main-block">
 <div class="col-md-8 offset-md-2">
 
-    <body background="{% static '/images/E0dsHx_WYAEiVk4.png' %}" style="background-size:cover; background-position: left;">
+    <body background="{% static '/images/E0dsHx_WYAEiVk4.jpg' %}" style="background-size:cover; background-position: left;">
     {% block page_content %}{% endblock %}
     </body>
 </div>
