--- a/grsmu_diplom/grsmu_diplom/templates/grsmu_diplom/main_page.html
+++ b/grsmu_diplom/grsmu_diplom/templates/grsmu_diplom/main_page.html
@@ -4,7 +4,7 @@
 <link href="{% static 'css/styles/grsmu_diplom/main_page.css' %}" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="{% static 'js/main_page.js' %}"> </script>
 
-<body background="{% static '/images/E0dsHx_WYAEiVk4.png' %}">
+<body background="{% static '/images/E0dsHx_WYAEiVk4.jpg' %}">
     <div class="container">
         <div class="col-md-8 offset-md-2">
 
