--- a/grsmu_diplom/users/templates/users/profile_page.html
+++ b/grsmu_diplom/users/templates/users/profile_page.html
@@ -3,7 +3,7 @@
 {% block page_content %}
 
 	<br><br>
-	<div class="container mx-auto" style="max-width: 1200px; background-color: rgb(255 255 255 / 75%); backdrop-filter: blur(100px); padding-top: 20px; border-radius: 30px;">
+	<div class="container mx-auto" style="max-width: 1200px; background-color: rgb(255 255 255 / 75%); backdrop-filter: blur(100px); padding-top: 20px; padding-bottom: 15px; border-radius: 30px;">
 	    <div class="row">
 	    	<div class="col-md-3">
 		    	<div class="card p-4">
@@ -78,7 +78,7 @@
 			</div>
 <!--ФОРМА ПРОВЕРКИ MOODLE-->
 		<div class="modal fade" tabindex="-1" id="VerificationModal" role="dialog">
-	  		<div class="modal-dialog" role="document">
+	  		<div class="modal-dialog" role="document" >
 		    	<div class="modal-content">
 		      		<div class="modal-header">
 			        	<h5 class="modal-title">Верификация аккаунта</h5>
@@ -128,5 +128,4 @@
 	  	</div>
 	</div>
   	</div>
-</div>
 {% endblock %}
