исправлено воостановление пароля

--- a/grsmu_diplom/users/templates/password/password_reset.html
+++ b/grsmu_diplom/users/templates/password/password_reset.html
@@ -3,6 +3,8 @@
 {% block page_content %}
 
 <div class="col-md-8 offset-md-2">
+    <div class="container" style="max-width: 1200px; background-color: rgb(255 255 255 / 75%); backdrop-filter: blur(100px); padding-top: 20px; border-radius: 30px; padding-bottom: 1px">
+
     <h1>Изменение пароля</h1>
     <p>Для изменения пароля введите свой email:</p>
     <form method="POST">
@@ -10,5 +12,6 @@
         {{ password_reset_form }}
         <button class="btn btn-primary" type="submit">Подтвердить</button>
     </form>
+</div>
 </div>
 {% endblock %}
