--- a/grsmu_diplom/users/templates/password/password_reset_complete.html
+++ b/grsmu_diplom/users/templates/password/password_reset_complete.html
@@ -3,8 +3,11 @@
 {% block page_content %}
 
 <div class="col-md-8 offset-md-2">
+    <div class="container" style="max-width: 1200px; background-color: rgb(255 255 255 / 75%); backdrop-filter: blur(100px); padding-top: 20px; border-radius: 30px; padding-bottom: 1px">
+
     <h1>Изменение пароля</h1>
     <p>Пароль успешно изменен</p>
         <a href="/user/login">Войти в профиль</a>
+</div>
 </div>
 {% endblock %}
