сделаны лайки без стилей

--- a/grsmu_diplom/demo_site/templates/demo_site/demo_site_detail.html
+++ b/grsmu_diplom/demo_site/templates/demo_site/demo_site_detail.html
@@ -3,6 +3,32 @@
 {% load static %}
 
 
+<script>
+  $(document).ready(function(){console.log("a vot");})
+  $(document).on('click', '#like', function(event){
+    event.preventDefault();
+    var pk = $(this).attr('value');
+    console.log(pk);
+    $.ajax({
+      type: 'POST',
+      url: '{% url "likes" %}',
+      data: {
+            'pk': pk,
+            'csrfmiddlewaretoken': '{{ csrf_token }}'
+            },
+      dataType: 'json',
+            success: function(response){
+              $('#like-section'+pk).html(response['form'])
+              console.log($('#like-section'+pk).html(response['form']));
+            },
+            error: function(rs, e){
+              console.log(rs.responseText);
+            },
+          });
+})
+</script>
+
+
 <div class="container" style="max-width: 1200px; background-color: rgb(255 255 255 / 75%); backdrop-filter: blur(100px); padding-top: 20px; border-radius: 30px; padding-bottom: 1px">
    <div class="top">
        <div class="row justify-content-md-center">
@@ -114,8 +140,13 @@
             <a data-toggle="collapse" href="#collapse{{comment.pk}}" role="button" aria-expanded="false" aria-controls="collapse{{comment.pk}}">Ответить</a>
                 </form>
             </div>
-            <div id="like-section">
-            {% include 'demo_site/like_section.html' %}
+
+            <div id="like-section{{comment.pk}}">
+                {% if request.user in comment.likes.all %}
+                    {% include 'demo_site/like_section.html' with is_liked=True %}
+                {% else %}
+                    {% include 'demo_site/like_section.html' with is_liked=False %}
+                {% endif %}
             </div>
         </div>
 <!--ANSWERS-->
