--- a/grsmu_diplom/demo_site/templates/demo_site/like_section.html
+++ b/grsmu_diplom/demo_site/templates/demo_site/like_section.html
@@ -1,32 +1,11 @@
-<script>
-  $(document).ready(function(){
-  $(document).on('click', '#like', function(event){
-    event.preventDefault();
-    var pk = $(this).attr('value');
-    console.log(pk);
-    $.ajax({
-      type: 'POST',
-      url: '{% url "likes" %}',
-      data: {
-            'pk': pk,
-            'csrfmiddlewaretoken': '{{ csrf_token }}'
-            },
-            success: function(response){
-              $('#like-section').html(response['form'])
-            },
-            error: function(rs, e){
-              console.log(rs.responseText);
-            },
-          });
-     });
-})
-</script>
 
-{{ total_likes }} Like
+
+{{ comment.likes.count }} Like
 {{ is_liked }}
+{{ teacher.name }}
 
 {% if request.user.is_authenticated %}
-<form action="{% url 'likes' %" method="POST">
+<form action="{% url 'likes' is_liked %" method="POST">
     {% csrf_token %}
     {% if is_liked %}
         <button type="submit" id="like" name="post_id" value="{{ comment.pk }}" class="btn btn-danger">Dislike</button>
