полностью сделаны лайки и дизлайки,изменены кнопки

--- a/grsmu_diplom/demo_site/templates/demo_site/comment_edit.html
+++ b/grsmu_diplom/demo_site/templates/demo_site/comment_edit.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% block page_content %}
+<div class="container" style="max-width: 1200px; background-color: rgb(255 255 255 / 75%); backdrop-filter: blur(100px); padding-top: 20px; border-radius: 30px; padding-bottom: 1px">
+
 <div class="col-md-8 offset-md-2">
     <h1>Редактирование комментария:</h1>
     <div class="container">
@@ -11,5 +13,6 @@
             <button type="submit" class="btn btn-primary">Изменить</button>
         </form>
     </div>
+</div>
 </div>
 {% endblock %}
