--- a/grsmu_diplom/demo_site/templates/demo_site/demo_site_detail.html
+++ b/grsmu_diplom/demo_site/templates/demo_site/demo_site_detail.html
@@ -158,13 +158,15 @@
             {% if comment.author == request.user or request.user.is_superuser %}
                 <form method="post" style="margin-bottom: -25px;">
                 {% csrf_token %}
-                <button type="submit" name="comment_delete" class="btn btn-danger">Удалить</button>
+
+                <button type="submit" name="comment_delete" class="btn btn-danger" style="max-width: 43px;"><i class="fa fa-trash" aria-hidden="true"></i></button>
                 <input type="hidden" name="comment_pk" value="{{ comment.pk }}">
-                <a href="{% url 'comment_edit' comment.pk %}">Изменить</a>
+                <a href="{% url 'comment_edit' comment.pk %}" type="button" class="btn btn-secondary" style="max-width: 43px;"><i class="fa fa-pencil" aria-hidden="true"></i></a>
+                <a data-toggle="collapse" href="#collapse{{comment.pk}}" role="button" type="button" class="btn btn-primary" aria-expanded="false" aria-controls="collapse{{comment.pk}}" style="max-width: 43px; "><i class="fa fa-reply" aria-hidden="true"></i></a>
+            {% else %}
+                <a data-toggle="collapse" href="#collapse{{comment.pk}}" role="button" type="button" class="btn btn-primary" aria-expanded="false" aria-controls="collapse{{comment.pk}}" style="max-width: 43px; margin-bottom: -25px;"><i class="fa fa-reply" aria-hidden="true"></i></a>
             {% endif %}
-            <a data-toggle="collapse" href="#collapse{{comment.pk}}" role="button" aria-expanded="false" aria-controls="collapse{{comment.pk}}">Ответить</a>
                 </form>
-            </div>
 
             <div id="like-section{{comment.pk}}">
                 {% if request.user in comment.likes.all %}
@@ -175,10 +177,14 @@
                     {% include 'demo_site/like_section.html' with is_liked=False %}
                 {% endif %}
             </div>
+
+            </div>
+
+
         </div>
 <!--ANSWERS-->
     <details>
-    <summary style="text-align: center;">ответы</summary>
+    <summary style="text-align: center;">ответы <i class="fa fa-comments-o" aria-hidden="true"></i></summary>
     {% for answer in comment_answers %}
     {% if answer.comment == comment %}
 
