--- a/grsmu_diplom/demo_site/templates/demo_site/like_section.html
+++ b/grsmu_diplom/demo_site/templates/demo_site/like_section.html
@@ -1,33 +1,33 @@
-{{ comment.likes.count }} Like
-{{ comment.dislikes.count }} DIsLike
-{{ is_liked }}
-{{ is_disliked }}
 {% load static %}
 <link href="{% static 'css/styles/demo_site/like_section.css' %}" rel="stylesheet" type="text/css" />
 
 
 {% if request.user.is_authenticated %}
-<div class="row">
-<form action="{% url 'likes' is_liked %" method="POST" style="max-width:20px;">
-    {% csrf_token %}
-    {% if is_liked %}
-<!--        <button type="submit" id="like" name="post_id" value="{{ comment.pk }}" class="btn btn-danger">Dislike</button>-->
-    <button type="submit" class="btn" id="like" name="post_id" value="{{ comment.pk }}" style="margin-left:15px;"><i class="fa fa-thumbs-up fa-lg" aria-hidden="true"  style="color: green;"></i></button>
-    {% else %}
-<!--        <button type="submit" id="like" name="post_id" value="{{ comment.pk }}" class="btn btn-primary">Like</button>-->
-    <button type="submit" class="btn" id="like" name="post_id" value="{{ comment.pk }}" style="margin-left:15px;"><i class="fa fa-thumbs-up fa-lg" aria-hidden="true" style="color: #AAA;"></i></button>
-    {% endif %}
-</form>
+<div class="container" style="margin-left: 30px;">
 
-<form action="{% url 'dislikes' is_disliked %" method="POST" style="max-width:20px;">
+<form action="{% url 'dislikes' is_disliked %" method="POST" style="ax-width:20px;">
     {% csrf_token %}
     {% if is_disliked %}
 <!--        <button type="submit" id="like" name="post_id" value="{{ comment.pk }}" class="btn btn-danger">Dislike</button>-->
-    <button type="submit" class="btn" id="dislike" name="post_id" value="{{ comment.pk }}" style="margin-left:15px;"><i class="fa fa-thumbs-down fa-lg" aria-hidden="true"  style="color: red;"></i></button>
+    <button type="submit" class="vote-btn" id="dislike" name="dislike" value="{{ comment.pk }}"><i class="fa fa-thumbs-down fa-lg" aria-hidden="true"  style="color: red;">{{ comment.dislikes.count }}</i></button>
     {% else %}
 <!--        <button type="submit" id="like" name="post_id" value="{{ comment.pk }}" class="btn btn-primary">Like</button>-->
-    <button type="submit" class="btn" id="dislike" name="post_id" value="{{ comment.pk }}" style="margin-left:15px;"><i class="fa fa-thumbs-down fa-lg" aria-hidden="true" style="color: #AAA;"></i></button>
+    <button type="submit" class="vote-btn" id="dislike" name="dislike" value="{{ comment.pk }}"><i class="fa fa-thumbs-down fa-lg" aria-hidden="true" style="color: #AAA;">{{ comment.dislikes.count }}</i></button>
     {% endif %}
 </form>
+
+<form action="{% url 'likes' is_liked %" method="POST" style="ax-width:20px;">
+    {% csrf_token %}
+    {% if is_liked %}
+<!--        <button type="submit" id="like" name="post_id" value="{{ comment.pk }}" class="btn btn-danger">Dislike</button>-->
+    <button type="submit" class="vote-btn" id="like" name="like" value="{{ comment.pk }}" ><i class="fa fa-thumbs-up fa-lg" aria-hidden="true"  style="color: green;">{{ comment.likes.count }}</i></button>
+    {% else %}
+<!--        <button type="submit" id="like" name="post_id" value="{{ comment.pk }}" class="btn btn-primary">Like</button>-->
+    <button type="submit" class="vote-btn" id="like" name="like" value="{{ comment.pk }}"><i class="fa fa-thumbs-up fa-lg" aria-hidden="true" style="color: #AAA;">{{ comment.likes.count }}</i></button>
+    {% endif %}
+
+</form>
+
+
 </div>
 {% endif %}
