--- a/grsmu_diplom/static/css/styles/demo_site/like_section.css
+++ b/grsmu_diplom/static/css/styles/demo_site/like_section.css
@@ -1,3 +1,17 @@
-button {
-    background-color: -internal-light-dark(rgb(239, 239, 239), rgb(59, 59, 59));
+.vote-btn {
+    background-color: #efefef;
+    border-radius: 7px;
+    padding: 7px;
+    border-width: 0px;
+    display:inline;
+    float:right;
+    margin: 2px;
 }
+
+user-select: none;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 0.25rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
